--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -14,6 +14,10 @@ on:
 jobs:
   build-test-coverage:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ["8.0.x", "9.0.x", "10.0.x"]
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,10 +30,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: |
-            8.0.x
-            9.0.x
-            10.0.x
+          dotnet-version: ${{ matrix.dotnet-version }}
 
       - name: Restore dependencies
         run: dotnet restore
@@ -58,7 +59,7 @@ jobs:
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
+          name: test-results-${{ matrix.dotnet-version }}
           path: ./TestResults/*.trx
 
       - name: Publish Test Results
@@ -82,7 +83,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: env.COVERAGE_FILE_PATH != ''
         with:
-          name: coverage-report
+          name: coverage-report-${{ matrix.dotnet-version }}
           path: ${{ env.COVERAGE_FILE_PATH }}
 
       - name: Generate Coverage Report
@@ -98,7 +99,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: env.COVERAGE_FILE_PATH != ''
         with:
-          name: html-coverage-report
+          name: html-coverage-report-${{ matrix.dotnet-version }}
           path: ./TestResults/coverage/report
 
       - name: Display Coverage Summary
